# bswp-pipeline

./: .gitignore  Cargo.toml  README.md  null.json
data/: stack_houses_page_0.json
src/: main.rs
src/graphql/: mod.rs
src/sources/: mod.rs
src/sources/quicknode/: mod.rs  structs.rs
src/sources/thegraph/: mod.rs  structs.rs
